--- a/arrays.html
+++ b/arrays.html
@@ -43,6 +43,55 @@
 		<div class="main-container">
 			<h1>[comp sci] / Arrays</h1>
 			
+			In Java, an array is a fixed-size collection of elements of the same data type. Once you declare an array, you cannot change its size. You can access individual elements of an array using their index, which starts from 0.
+
+			Here's an example of how to declare and initialize an array of integers:
+
+<pre>
+int[] numbers = {1, 2, 3, 4, 5};</pre>
+
+			In this example, we declare an integer array called **`numbers`** and initialize it with five elements: 1, 2, 3, 4, and 5.
+
+			You can also declare an array of a certain size without initializing it:
+
+<pre>
+int[] numbers = new int[5];</pre>
+
+			In this example, we declare an integer array called **`numbers`** with a size of 5. This array is initialized with default values (0 for integers) for each element.
+
+			Here's how you can access individual elements of an array:
+
+<pre>
+int firstNumber = numbers[0];
+int thirdNumber = numbers[2];</pre>
+
+			In this example, we use the square brackets to access the first element of the **`numbers`** array (which has an index of 0) and assign it to a variable called **`firstNumber`**. Similarly, we access the third element (which has an index of 2) and assign it to a variable called **`thirdNumber`**.
+
+			You can also change the value of an element in an array:
+
+<pre>
+numbers[0] = 6;</pre>
+
+			In this example, we change the value of the first element in the **`numbers`** array to 6.
+
+			Here you can iterate over the elements of an array using a loop:
+
+<pre>
+for (int i = 0; i < numbers.length; i++) {
+    System.out.println(numbers[i]);
+}</pre>
+
+			In this example, we use a **`for`** loop to iterate over each element of the **`numbers`** array. The **`length`** property of the array gives us the size of the array, so we use this to determine when to stop looping. Inside the loop, we use the index variable **`i`** to access each element of the array and print it to the console.
+
+			Finally, you can also use a for each loop to iterate through an array without using an index
+
+<pre>
+for (int x : numbers) {
+		System.out.println(x);
+}</pre>
+
+			In this example, we use a `foreach` loop to iterate through each value in `numbers`. The variable `x` takes on the value of each element in the array.
+
 		</div>
  
 		<script src="scripts/notes.js"></script>
