fixed inline code

--- a/arraylists.html
+++ b/arraylists.html
@@ -52,31 +52,31 @@ import java.util.ArrayList;
 
 ArrayList<Integer> numbers = new ArrayList<Integer>();</pre>
 
-In this example, we declare an ArrayList called **`numbers`** that can hold Integer objects. Note that we need to import the **`java.util.ArrayList`** class to use ArrayLists in our code.
+In this example, we declare an ArrayList called <c>numbers</c> that can hold Integer objects. Note that we need to import the <c>java.util.ArrayList</c> class to use ArrayLists in our code.
 
-You can add elements to an ArrayList using the **`add()`** method:
+You can add elements to an ArrayList using the <c>add()</c> method:
 
 <pre>
 numbers.add(1);
 numbers.add(2);
 numbers.add(3);</pre>
 
-In this example, we use the **`add()`** method to add three integers to the **`numbers`** ArrayList.
+In this example, we use the <c>add()</c> method to add three integers to the <c>numbers</c> ArrayList.
 
-You can access individual elements of an ArrayList using the **`get()`** method:
+You can access individual elements of an ArrayList using the <c>get()</c> method:
 
 <pre>
 int firstNumber = numbers.get(0);
 int thirdNumber = numbers.get(2);</pre>
 
-In this example, we use the **`get()`** method to access the first element of the **`numbers`** ArrayList (which has an index of 0) and assign it to a variable called **`firstNumber`**. Similarly, we access the third element (which has an index of 2) and assign it to a variable called **`thirdNumber`**.
+In this example, we use the <c>get()</c> method to access the first element of the <c>numbers</c> ArrayList (which has an index of 0) and assign it to a variable called <c>firstNumber</c>. Similarly, we access the third element (which has an index of 2) and assign it to a variable called <c>thirdNumber</c>.
 
 You can also change the value of an element in an ArrayList:
 
 <pre>
 numbers.set(0, 6);</pre>
 
-In this example, we use the **`set()`** method to change the value of the first element in the **`numbers`** ArrayList to 6.
+In this example, we use the <c>set()</c> method to change the value of the first element in the <c>numbers</c> ArrayList to 6.
 
 Finally, you can iterate over the elements of an ArrayList using a loop:
 
@@ -85,7 +85,7 @@ for (int i = 0; i < numbers.size(); i++) {
     System.out.println(numbers.get(i));
 }</pre>
 
-In this example, we use a **`for`** loop to iterate over each element of the **`numbers`** ArrayList. The **`size()`** method of the ArrayList gives us the number of elements in the ArrayList, so we use this to determine when to stop looping. Inside the loop, we use the **`get()`** method and the index variable **`i`** to access each element of the ArrayList and print it to the console.
+In this example, we use a <c>for</c> loop to iterate over each element of the <c>numbers</c> ArrayList. The <c>size()</c> method of the ArrayList gives us the number of elements in the ArrayList, so we use this to determine when to stop looping. Inside the loop, we use the <c>get()</c> method and the index variable <c>i</c> to access each element of the ArrayList and print it to the console.
 
 		</div>
  
