--- a/2Darrays.html
+++ b/2Darrays.html
@@ -50,7 +50,7 @@ Here's an example of how to declare and initialize a 2D array of integers:
 <pre>
 int[][] numbers = {{1, 2, 3}, {4, 5, 6}, {7, 8, 9}};</pre>
 
-In this example, we declare a 2D integer array called **`numbers`** and initialize it with three rows and three columns. The values in the array are set using the curly braces notation.
+In this example, we declare a 2D integer array called <c>numbers</c> and initialize it with three rows and three columns. The values in the array are set using the curly braces notation.
 
 You can access individual elements of a 2D array using their row and column index:
 
@@ -58,14 +58,14 @@ You can access individual elements of a 2D array using their row and column inde
 int firstNumber = numbers[0][0];
 int thirdNumber = numbers[0][2];</pre>
 
-In this example, we use the square brackets to access the first element of the first row in the **`numbers`** array (which has a row index of 0 and a column index of 0) and assign it to a variable called **`firstNumber`**. Similarly, we access the third element of the first row (which has a row index of 0 and a column index of 2) and assign it to a variable called **`thirdNumber`**.
+In this example, we use the square brackets to access the first element of the first row in the <c>numbers</c> array (which has a row index of 0 and a column index of 0) and assign it to a variable called <c>firstNumber</c>. Similarly, we access the third element of the first row (which has a row index of 0 and a column index of 2) and assign it to a variable called <c>thirdNumber</c>.
 
 You can also change the value of an element in a 2D array:
 
 <pre>
 numbers[0][0] = 6;</pre>
 
-In this example, we change the value of the first element in the first row of the **`numbers`** array to 6.
+In this example, we change the value of the first element in the first row of the <c>numbers</c> array to 6.
 
 Finally, you can iterate over the elements of a 2D array using nested loops:
 
@@ -76,7 +76,7 @@ for (int i = 0; i < numbers.length; i++) {
     }
 }</pre>
 
-In this example, we use two **`for`** loops to iterate over each element of the **`numbers`** array. The outer loop iterates over each row, while the inner loop iterates over each column in the current row. Inside the inner loop, we use the row index variable **`i`** and the column index variable **`j`** to access each element of the array and print it to the console.
+In this example, we use two <c>for</c> loops to iterate over each element of the <c>numbers</c> array. The outer loop iterates over each row, while the inner loop iterates over each column in the current row. Inside the inner loop, we use the row index variable <c>i</c> and the column index variable <c>j</c> to access each element of the array and print it to the console.
 
 		</div>
  
