--- a/UMLAccessModifiers.html
+++ b/UMLAccessModifiers.html
@@ -84,7 +84,7 @@ public class Student {
 			
 			<p>
 				you may notice that in the constructor i added an underscore to differentiate between the constructor parameters and the class attributes
-				<br>in professional code you will often see either underscores, or the `this` keyword (explained in different file) used
+				<br>in professional code you will often see either underscores, or the <c>this</c> keyword (explained in different file) used
 				<br>Here is how you would define this class in UML
 			</p>
 <pre>
@@ -104,19 +104,19 @@ public class Student {
 				take a second to look at the similarities between the class and the UML diagram
 				<br>the first section of the UML is the name of the class
 				<br>the second section is all of the attributes
-				<br>they follow the format `attributeName: dataType`
+				<br>they follow the format <c>attributeName: dataType</c>
 				<br>the third section is all of the methods
-				<br>they follow the format `methodName(parameterName: dataType): returnDataType`
+				<br>they follow the format <c>methodName(parameterName: dataType): returnDataType</c>
 				<br>the constructor has no return type (not even void), so nothing is written in that case
-				<br>a `+` before an attribute or method means that it is public
-				<br>a `-` means that it is private
+				<br>a <c>+</c> before an attribute or method means that it is public
+				<br>a <c>-</c> means that it is private
 			</p>
 
 			<h2>What is public vs private?</h2>
 
 			<p>
-				`public` before an attribute or method means it can be accessed from any other class/file
-				<br>`private` before an attribute or method means it **cannot** be accessed from anywhere else except for its own class
+				<c>public</c> before an attribute or method means it can be accessed from any other class/file
+				<br><c>private</c> before an attribute or method means it **cannot** be accessed from anywhere else except for its own class
 			</p>
 
 			Consider the following example:
@@ -143,8 +143,8 @@ public class Driver {
 			
 			<p>
 				notice how:
-			    <br>`firstName` is `public`
-			    <br>`lastName` is `private`
+			    <br><c>firstName</c> is <c>public</c>
+			    <br><c>lastName</c> is <c>private</c>
 				<br>now let’s try to access these attributes from the driver class
 			</p>
 <pre>
@@ -167,8 +167,8 @@ Driver.java:6: error: lastName has private access in Person
 </pre>
 			
 			<p>
-				the program crashes because the Driver class cannot access the **private** attribute `lastName`
-				<br>if instead we were to print `person1.firstName` the program would not crash because that attribute is public
+				the program crashes because the Driver class cannot access the **private** attribute <c>lastName</c>
+				<br>if instead we were to print <c>person1.firstName</c> the program would not crash because that attribute is public
 			</p>
 
 			<h2>Other access modifiers</h2>
@@ -176,13 +176,13 @@ Driver.java:6: error: lastName has private access in Person
 			((this section is more complicated, and likely not necessary to understand in this course))
 
 			<p>
-				on top of `public` and `private`, there is also `protected` and `default`
-				<br>`protected` and `default` are very similar
+				on top of <c>public</c><c> and <c>private</c>, there is also <c>protected</c> and <c>default</c>
+				<br><c>protected</c> and <c>default</c> are very similar
 				    <br>they make it so that class attributes can be seen by subclasses (any class that inherits from itself)
 				    <br>in comparison, if a variable is private the subclasses will not have access to it
 				<br>Java, however, is not only a group of classes, but a group of packages
 				<br>packages are used to organize code, as well as control access modifiers (a bit of a paradox!)
-				<br>an attribute with a `default` access modifier will be visible to subclasses in the same package, but not visible to subclasses in a separate package
+				<br>an attribute with a <c>default</c> access modifier will be visible to subclasses in the same package, but not visible to subclasses in a separate package
 			</p>
 			    also note that if you make an attribute and don’t specify an access modifier
 
@@ -193,7 +193,7 @@ Driver.java:6: error: lastName has private access in Person
 			    <br><c>default x = 10</c>
 
 			   	<p>
-					an attribute with the `protected` access modifier will, on top of being visible to classes subclasses in the same package, will also be visible to subclasses in other packages. However it will not be visible to any non subclasses (any classes that don’t inherit from itself) in other packages
+					an attribute with the <c>protected</c> access modifier will, on top of being visible to classes subclasses in the same package, will also be visible to subclasses in other packages. However it will not be visible to any non subclasses (any classes that don’t inherit from itself) in other packages
 				</p>
 	
 				This table helped me understand				
