--- a/arrays.html
+++ b/arrays.html
@@ -50,14 +50,14 @@
 <pre>
 int[] numbers = {1, 2, 3, 4, 5};</pre>
 
-			In this example, we declare an integer array called **`numbers`** and initialize it with five elements: 1, 2, 3, 4, and 5.
+			In this example, we declare an integer array called <c>numbers</c> and initialize it with five elements: 1, 2, 3, 4, and 5.
 
 			You can also declare an array of a certain size without initializing it:
 
 <pre>
 int[] numbers = new int[5];</pre>
 
-			In this example, we declare an integer array called **`numbers`** with a size of 5. This array is initialized with default values (0 for integers) for each element.
+			In this example, we declare an integer array called <c>numbers</c> with a size of 5. This array is initialized with default values (0 for integers) for each element.
 
 			Here's how you can access individual elements of an array:
 
@@ -65,14 +65,14 @@ int[] numbers = new int[5];</pre>
 int firstNumber = numbers[0];
 int thirdNumber = numbers[2];</pre>
 
-			In this example, we use the square brackets to access the first element of the **`numbers`** array (which has an index of 0) and assign it to a variable called **`firstNumber`**. Similarly, we access the third element (which has an index of 2) and assign it to a variable called **`thirdNumber`**.
+			In this example, we use the square brackets to access the first element of the <c>numbers</c> array (which has an index of 0) and assign it to a variable called <c>firstNumber</c>. Similarly, we access the third element (which has an index of 2) and assign it to a variable called <c>thirdNumber</c>.
 
 			You can also change the value of an element in an array:
 
 <pre>
 numbers[0] = 6;</pre>
 
-			In this example, we change the value of the first element in the **`numbers`** array to 6.
+			In this example, we change the value of the first element in the <c>numbers</c> array to 6.
 
 			Here you can iterate over the elements of an array using a loop:
 
@@ -81,7 +81,7 @@ for (int i = 0; i < numbers.length; i++) {
     System.out.println(numbers[i]);
 }</pre>
 
-			In this example, we use a **`for`** loop to iterate over each element of the **`numbers`** array. The **`length`** property of the array gives us the size of the array, so we use this to determine when to stop looping. Inside the loop, we use the index variable **`i`** to access each element of the array and print it to the console.
+			In this example, we use a <c>for</c> loop to iterate over each element of the <c>numbers</c> array. The <c>length</c> property of the array gives us the size of the array, so we use this to determine when to stop looping. Inside the loop, we use the index variable <c>i</c> to access each element of the array and print it to the console.
 
 			Finally, you can also use a for each loop to iterate through an array without using an index
 
@@ -90,7 +90,7 @@ for (int x : numbers) {
 		System.out.println(x);
 }</pre>
 
-			In this example, we use a `foreach` loop to iterate through each value in `numbers`. The variable `x` takes on the value of each element in the array.
+			In this example, we use a <c>foreach</c> loop to iterate through each value in <c>numbers</c>. The variable <c>x</c> takes on the value of each element in the array.
 
 		</div>
  
