fixed inline error

--- a/UMLAccessModifiers.html
+++ b/UMLAccessModifiers.html
@@ -176,7 +176,7 @@ Driver.java:6: error: lastName has private access in Person
 			((this section is more complicated, and likely not necessary to understand in this course))
 
 			<p>
-				on top of <c>public</c><c> and <c>private</c>, there is also <c>protected</c> and <c>default</c>
+				on top of <c>public</c> and <c>private</c>, there is also <c>protected</c> and <c>default</c>
 				<br><c>protected</c> and <c>default</c> are very similar
 				    <br>they make it so that class attributes can be seen by subclasses (any class that inherits from itself)
 				    <br>in comparison, if a variable is private the subclasses will not have access to it
